# cmake_missing_warning

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  main.cpp
.github/: dependabot.yml
.github/workflows/: build.yml
_codeql_build_dir/: hello_world
